--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -1,4 +1,4 @@
-:plugin: elasticsearch
+:plugin: opensearch
 :type: filter
 
 ///////////////////////////////////////////
@@ -14,19 +14,19 @@ END - GENERATED VARIABLES, DO NOT EDIT!
 
 [id="plugins-{type}s-{plugin}"]
 
-=== Elasticsearch filter plugin
+=== OpenSearch filter plugin
 
 include::{include_path}/plugin_header.asciidoc[]
 
 ==== Description
 
-Search Elasticsearch for a previous log event and copy some fields from it
+Search OpenSearch for a previous log event and copy some fields from it
 into the current event. Below are two complete examples of how this filter might
 be used.
 
 The first example uses the legacy 'query' parameter where the user is limited to
-an Elasticsearch query_string.
-Whenever logstash receives an "end" event, it uses this elasticsearch
+an OpenSearch query_string.
+Whenever logstash receives an "end" event, it uses this opensearch
 filter to find the matching "start" event based on some operation identifier.
 Then it copies the `@timestamp` field from the "start" event into a new field on
 the "end" event.  Finally, using a combination of the "date" filter and the
@@ -35,7 +35,7 @@ the "end" event.  Finally, using a combination of the "date" filter and the
 [source,ruby]
 --------------------------------------------------
 if [type] == "end" {
-   elasticsearch {
+   opensearch {
       hosts => ["es-server"]
       query => "type:start AND operation:%{[opid]}"
       fields => { "@timestamp" => "started" }
@@ -53,14 +53,14 @@ if [type] == "end" {
 --------------------------------------------------
 
 The example below reproduces the above example but utilises the query_template.
-This query_template represents a full Elasticsearch query DSL and supports the
+This query_template represents a full OpenSearch query DSL and supports the
 standard Logstash field substitution syntax.  The example below issues
 the same query as the first example but uses the template shown.
 
 [source,ruby]
 --------------------------------------------------
 if [type] == "end" {
-      elasticsearch {
+      opensearch {
          hosts => ["es-server"]
          query_template => "template.json"
          fields => { "@timestamp" => "started" }
@@ -96,7 +96,7 @@ template.json:
 
 As illustrated above, through the use of 'opid', fields from the Logstash
 events can be referenced within the template.
-The template will be populated per event prior to being used to query Elasticsearch.
+The template will be populated per event prior to being used to query OpenSearch.
 
 Notice also that when you use `query_template`, the Logstash attributes `result_size`
 and `sort` will be ignored. They should be specified directly in the JSON
@@ -105,7 +105,7 @@ template, as shown in the example above.
 [id="plugins-{type}s-{plugin}-auth"]
 ==== Authentication
 
-Authentication to a secure Elasticsearch cluster is possible using _one_ of the following options:
+Authentication to a secure OpenSearch cluster is possible using _one_ of the following options:
 
 * <<plugins-{type}s-{plugin}-user>> AND <<plugins-{type}s-{plugin}-password>>
 * <<plugins-{type}s-{plugin}-cloud_auth>>
@@ -115,11 +115,11 @@ Authentication to a secure Elasticsearch cluster is possible using _one_ of the 
 [id="plugins-{type}s-{plugin}-autz"]
 ==== Authorization
 
-Authorization to a secure Elasticsearch cluster requires `read` permission at index level and `monitoring` permissions at cluster level.
+Authorization to a secure OpenSearch cluster requires `read` permission at index level and `monitoring` permissions at cluster level.
 The `monitoring` permission at cluster level is necessary to perform periodic connectivity checks.
 
 [id="plugins-{type}s-{plugin}-options"]
-==== Elasticsearch Filter Configuration Options
+==== OpenSearch Filter Configuration Options
 
 This plugin supports the following configuration options plus the <<plugins-{type}s-{plugin}-common-options>> and the <<plugins-{type}s-{plugin}-deprecated-options>> described later.
 
@@ -173,12 +173,12 @@ filter plugins.
   * Value type is <<hash,hash>>
   * Default value is `{}`
 
-Hash of aggregation names to copy from elasticsearch response into Logstash event fields
+Hash of aggregation names to copy from opensearch response into Logstash event fields
 
 Example:
 [source,ruby]
     filter {
-      elasticsearch {
+      opensearch {
         aggregation_fields => {
           "my_agg_name" => "my_ls_field"
         }
@@ -191,11 +191,11 @@ Example:
   * Value type is <<password,password>>
   * There is no default value for this setting.
 
-Authenticate using Elasticsearch API key. Note that this option also requires
+Authenticate using OpenSearch API key. Note that this option also requires
 enabling the <<plugins-{type}s-{plugin}-ssl_enabled>> option.
 
 Format is `id:api_key` where `id` and `api_key` are as returned by the
-Elasticsearch {ref}/security-api-create-api-key.html[Create API key API].
+OpenSearch {ref}/security-api-create-api-key.html[Create API key API].
 
 [id="plugins-{type}s-{plugin}-ca_trusted_fingerprint"]
 ===== `ca_trusted_fingerprint`
@@ -204,7 +204,7 @@ Elasticsearch {ref}/security-api-create-api-key.html[Create API key API].
 * There is no default value for this setting.
 * Use of this option _requires_ Logstash 8.3+
 
-The SHA-256 fingerprint of an SSL Certificate Authority to trust, such as the autogenerated self-signed CA for an Elasticsearch cluster.
+The SHA-256 fingerprint of an SSL Certificate Authority to trust, such as the autogenerated self-signed CA for an OpenSearch cluster.
 
 [id="plugins-{type}s-{plugin}-cloud_auth"]
 ===== `cloud_auth`
@@ -234,12 +234,12 @@ For more info, check out the
   * Value type is <<hash,hash>>
   * Default value is `{}`
 
-Hash of docinfo fields to copy from old event (found via elasticsearch) into new event
+Hash of docinfo fields to copy from old event (found via opensearch) into new event
 
 Example:
 [source,ruby]
     filter {
-      elasticsearch {
+      opensearch {
         docinfo_fields => {
           "_id" => "document_id"
           "_index" => "document_index"
@@ -261,11 +261,11 @@ Whether results should be sorted or not
   * Value type is <<array,array>>
   * Default value is `{}`
 
-An array of fields to copy from the old event (found via elasticsearch) into the
+An array of fields to copy from the old event (found via opensearch) into the
 new event, currently being processed.
 
 In the following example, the values of `@timestamp` and `event_id` on the event
-found via elasticsearch are copied to the current event's
+found via opensearch are copied to the current event's
 `started` and `start_id` fields, respectively:
 
 [source,ruby]
@@ -282,7 +282,7 @@ fields => {
   * Value type is <<array,array>>
   * Default value is `["localhost:9200"]`
 
-List of elasticsearch hosts to use for querying.
+List of opensearch hosts to use for querying.
 
 [id="plugins-{type}s-{plugin}-index"]
 ===== `index` 
@@ -317,8 +317,8 @@ environment variables e.g. `proxy => '${LS_PROXY:}'`.
   * Value type is <<string,string>>
   * There is no default value for this setting.
 
-Elasticsearch query string. More information is available in the
-{ref}/query-dsl-query-string-query.html#query-string-syntax[Elasticsearch query
+OpenSearch query string. More information is available in the
+{ref}/query-dsl-query-string-query.html#query-string-syntax[OpenSearch query
 string documentation].
 Use either `query` or `query_template`.
 
@@ -329,8 +329,8 @@ Use either `query` or `query_template`.
   * Value type is <<string,string>>
   * There is no default value for this setting.
 
-File path to elasticsearch query in DSL format. More information is available in
-the {ref}/query-dsl.html[Elasticsearch query documentation].
+File path to opensearch query in DSL format. More information is available in
+the {ref}/query-dsl.html[OpenSearch query documentation].
 Use either `query` or `query_template`.
 
 [id="plugins-{type}s-{plugin}-result_size"]
@@ -402,7 +402,7 @@ Supported cipher suites vary depending on the Java and protocol versions.
   * Value type is <<boolean,boolean>>
   * There is no default value for this setting.
 
-Enable SSL/TLS secured communication to Elasticsearch cluster.
+Enable SSL/TLS secured communication to OpenSearch cluster.
 Leaving this unspecified will use whatever scheme is specified in the URLs listed in <<plugins-{type}s-{plugin}-hosts>> or extracted from the <<plugins-{type}s-{plugin}-cloud_id>>.
 If no explicit protocol is specified plain HTTP will be used.
 
@@ -450,7 +450,7 @@ The format of the keystore file. It must be either `jks` or `pkcs12`.
   * Default depends on the JDK being used. With up-to-date Logstash, the default is `['TLSv1.2', 'TLSv1.3']`.
   `'TLSv1.1'` is not considered secure and is only provided for legacy applications.
 
-List of allowed SSL/TLS versions to use when establishing a connection to the Elasticsearch cluster.
+List of allowed SSL/TLS versions to use when establishing a connection to the OpenSearch cluster.
 
 For Java 8 `'TLSv1.3'` is supported only since **8u262** (AdoptOpenJDK), but requires that you set the
 `LS_JAVA_OPTS="-Djdk.tls.client.protocols=TLSv1.3"` system property in Logstash.
@@ -506,7 +506,7 @@ WARNING: Setting certificate verification to `none` disables many security benef
 ===== `tag_on_failure` 
 
   * Value type is <<array,array>>
-  * Default value is `["_elasticsearch_lookup_failure"]`
+  * Default value is `["_opensearch_lookup_failure"]`
 
 Tags the event on failure to look up previous log event information. This can be used in later analysis.
 
@@ -520,7 +520,7 @@ Basic Auth - username
 
 
 [id="plugins-{type}s-{plugin}-deprecated-options"]
-==== Elasticsearch Filter Deprecated Configuration Options
+==== OpenSearch Filter Deprecated Configuration Options
 
 This plugin supports the following deprecated configurations.
 
